# app-lakecircle

./: .env.sample  README.md  environment.yml  makefile  pyproject.toml  pytest.ini  sample.another.toml  sample.empty.toml  sample.first.toml  test.py
app/: main.py
app/base/: __init__.py  component.py
app/base/tests/: test_class_component_all.py
app/interface/: __init__.py  constants.py  interface.py  payload.py
app/model/definition/: account.py  bucket.py
app/model/definition/tests/: __init__.py  test_class_account_all.py  test_class_bucket_all.py
app/model/lifecycle/: __init__.py  abortincompletemultipartupload.py  common.py  expiration.py  filter.py  lifecycleconfiguration.py  lifecyclerule.py  noncurrentversionexpiration.py  noncurrentversiontransition.py  storageclass.py  transition.py
app/model/lifecycle/tests/: __init__.py  test_class_abortincompletemultipartupload_all.py  test_class_expiration_all.py  test_class_filter_all.py  test_class_lifecycleconfiguration_all.py  test_class_lifecyclerule_all.py  test_class_noncurrentversionexpiration_all.py  test_class_noncurrentversiontransition_all.py  test_class_storageclass_all.py  (+1 more)
app/model/resource/: account.py  bucket.py  common.py
app/variable/: __init__.py  constant.py  environ.py  setting.py  variable.py  varkind.py
app/variable/tests/: __init__.py  test_class_constant_all.py  test_class_environ_all.py  test_class_setting_all.py  test_class_variable_all.py  test_class_varkind_all.py
app/work/: summarise.py  sync.py
doc/: architecture.md  dataflow.md  summarise-improvements.md
(+4 files in other folders)
